# goober

./: .gitignore  Cargo.toml  Config.toml.example  README.md  config.example.yaml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  dockerfile  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/workflows/: main.yml
app/: api.go  app.go  error_handler.go  router.go  validator.go
app/middleware/: auth.go  jwt.go  logger.go  middleware.go  recover.go  spa.go
auth/: handler.go  service.go
client/src/: App.svelte  routes.js  store.js
cmd/: migrate.go  root.go  start.go
cmd/migrator/: main.go
cmd/uploader/: main.go
db/: db.go
domain/auth/: handler.go  service.go
domain/upload/: file.go  handler.go  repository.go  service.go
domain/users/: handler.go  repository.go  service.go  user.go
errors/: errors.go
files/: file.go  repository.go
handlers/: download.go  login.go  status.go  upload.go
handlers/upload/: download.go  status.go  upload.go
handlers/users/: delete.go  invite.go  login.go  register.go  update.go
internal/auth/: handler.go  service.go
internal/server/: server.go
models/: user.go
router/: error_handler.go
server/: api.go  config.go  error_handler.go  router.go  server.go
src/: guards.rs  lib.rs  main.rs  paste_id.rs  router.rs
store/: cache.go  db.go
templates/: index.html.hbs  list.html.hbs  login.html.hbs
upload/: file.go  handler.go  repository.go  service.go
users/: handler.go  model.go  repository.go  service.go
web/: package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js
(+75 files in other folders)
