[package]
name = "uploader"
version = "0.1.0"
authors = ["HichuYamichu <hichuyamichu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rand = "0.7.2"
serde = "1.0"
serde_derive = "1.0"
rocket-multipart-form-data = "0.7.2"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["handlebars_templates"]